crates/pixi_cli/src/workspace/export/snapshots/pixi_cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_from_lockfile_osx-arm64.snap
---
source: crates/pixi_cli/src/workspace/export/conda_environment.rs
expression: env_yaml.to_yaml_string()
---
name: default
channels:
- conda-forge
- nodefaults
dependencies:
- bzip2 ==1.0.8 hd037594_8
- ca-certificates ==2024.8.30 hf0a4a13_0
- icu ==75.1 hfee45f7_0
- libexpat ==2.7.1 hec049ff_0
- libffi ==3.4.6 h1da3d7d_1
- liblzma ==5.8.1 h39f12f2_2
- libmpdec ==4.0.0 h5505292_0
- libsqlite ==3.50.4 h4237e3c_0
- libzlib ==1.3.1 h8359307_2
- ncurses ==6.5 h5e97a16_3
- openssl ==3.5.3 h5503f6c_1
- python ==3.13.7 h5c937ed_100_cp313
- python_abi ==3.13 8_cp313
- readline ==8.2 h1d1bf99_2
- tk ==8.6.13 h892fb3f_2
- tzdata ==2025b h78e105d_0
- pip
- pip:
  - markdown-it-py==4.0.0
  - mdurl==0.1.2
  - test-git-subdir-roundtrip @ git+https://github.com/ihnorton/pixi.git?subdirectory=tests%2Fdata%2Fmock-projects%2Ftest-project-export%2Ftest-git-subdir-roundtrip&rev=ihn%2Ffix-pypi-git-subdir-roundtrip#86fd30aa3baa9bde1491fb1468f767b93f3d5009
  - pygments==2.19.2
  - rich==13.9.4
