crates/pixi_cli/src/workspace/export/snapshots/pixi_cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_with_pip_find_links.snap
---
source: crates/pixi_cli/src/workspace/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: default
channels:
- conda-forge
- nodefaults
dependencies:
- python 3.12.*
- pip
- pip:
  - --index-url https://pypi.org/simple
  - --find-links ./links
  - requests==2.31.0
